# sonnet-action

./: .gitignore  README.md  call_claude.py  docs.md  pyproject.toml
.github/workflows/: bedrock-claude.yml
sonnet_action/: __init__.py  call_claude.py
