[project]
name = "sonnet-action"
version = "0.1.0"
description = "GitHub Action to call Claude Sonnet using Amazon Bedrock"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic[bedrock]>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
] 