[project]
name = "sonnet-action"
version = "0.1.0"
description = "GitHub Action to call Claude Sonnet using Amazon Bedrock"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic[bedrock]>=0.40.0",
]

[project.scripts]
call-claude = "sonnet_action.call_claude:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sonnet_action"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
] 